# mad_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
_archive/: get_model.sh  get_models.sh  start.launch  start_dir_predict.launch  start_real_camera.launch  start_test_bag.launch  start_test_image.launch
launch/: test_detector.launch
msg/: Detection.msg  Detections.msg
scripts/: hsv_tuner.py  split_bags.py  test_detector.py  test_detector_ros.py
src/mad_detector/: infer.py  utils.py  wrapper.py
wheels/: dcvt-0.1-py3-none-any.whl
